fixed spacing on wells css

--- a/epic/css/style.css
+++ b/epic/css/style.css
@@ -1,4 +1,5 @@
 
+
 .background-gradient{
 	width: 100%;
 	height: 100%;
@@ -16,11 +17,6 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#21d114', endColorstr='#6dc6f9', GradientType=1 );
 }
 
-body{
-	padding: 0;
-	margin: 0;
-
-}
 
 .navbar-trans {
 	background:transparent;
